# COVID-19-trend-app

./: .flaskenv  README.md  pyproject.toml
covid_19_flask_app/: __init__.py  preprocess.py  preprocess_US.py  views.py
covid_19_flask_app/templates/: base.html  confirmed.html  deaths.html  global.html  us.html
data/: march_active_global.csv  march_confirmed.csv  march_confirmed_US.csv  march_confirmed_global.csv  march_deaths.csv  march_deaths_US.csv  march_deaths_global.csv  march_recovered_global.csv
