[tool.poetry]
name = "covid_19_flask_app"
version = "0.1.0"
description = "COVID-19 Flask App"
authors = ["Aisha Khatun<aysha.kamal7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
pandas = "^1.0.3"
numpy = "^1.18.4"
matplotlib = "^3.2.1"
seaborn = "^0.10.1"
plotly = "^4.7.1"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
